Update-availabilityWindow,upiTransactionId,buyerVpa

--- a/beckn-schemas/PaymentSettlements/v1/attributes.yaml
+++ b/beckn-schemas/PaymentSettlements/v1/attributes.yaml
@@ -68,3 +68,22 @@ components:
                 example: "https://payments.example.com/pay?transaction_id=123&amount=100"
                 x-jsonld: { "@id": "schema:url" }
 
+    ########################################################################
+    # BUYER.ATTRIBUTES — BuyerPaymentInfo
+    ########################################################################
+    BuyerPaymentInfo:
+      type: object
+      additionalProperties: false
+      description: >
+        Payment-related information for the buyer. Attached to Buyer.buyerAttributes
+        to provide UPI/payment details without modifying the core Buyer schema.
+      x-jsonld:
+        "@context": ./context.jsonld
+        "@type": BuyerPaymentInfo
+      properties:
+        vpa:
+          type: string
+          description: Virtual Payment Address (UPI ID) of the buyer.
+          example: "ravikumar@upi"
+          x-jsonld: { "@id": vpa }
+
